--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <body>
     <h1>GOL-Infinite</h1>
     <hr>
-    <p><a href="fist/index.html">Launch GOL-Infinite</a></p>
+    <p><a href="dist/index.html">Launch GOL-Infinite</a></p>
 </body>
 </html>
